# learn-opengl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/glad/: CMakeLists.txt
src/: main.cpp
